<resources>
  <string name="app_name">Mae</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings"
      >Settings
  </string>
  <string name="user_name">User Name</string>
  <string name="user_dob">Date Of Birth</string>
  <string name="choose_avatar">Choose One Avater</string>
  <string name="mm_toVote">မဲပေးရန်</string>
  <string name="single_candidate">တစ်သီးပုဂ္ဂလ အမတ်</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="check_voter">မဲစာရင်းစစ်ရန်\nအချက်အလက်ထည့်ပါ</string>
  <string name="congrat">ဂုဏ်ယူပါတယ်</string>
  <string name="voter_check_ok">မဲပေးခွင့်ရှိသူတစ်ယောက်အဖြစ် မဲစာရင်းတွင် ပါ၀င်ပါသည်</string>
  <string name="voter_check_not_ok">သင့်နာမည်အား အွန်လိုင်းရှိ မဲဆန္ဒရှင်စာရင်းတွင် ရှာမတွေ့ပါ။
    မိမိမြို့နယ်ရှိ မဲဆန္ဒရှင်စာရင်းတွင် ပြန်လည် သွားရောက်စစ်ဆေးရန် အကြံပြုပါသည်
  </string>
  <string name="please_mm">အချက်အလက် များကို မြန်မာလို ဖြည့်စွက်ပေးရန် မေတ္တာရပ်ခံအပ်သည်</string>
  <string name="recheck_data">အချက်အလက်ပြန်ကြည့်မည်</string>
  <string name="ok_myan">ကောင်းပြီ</string>
  <string name="recheck">ပြန်လည်စစ်ဆေးပါ</string>
  <string name="title_activity_candidate">CandidateActivity</string>
  <string name="tip_location">သင့်မဲဆန္ဒနယ် နယ်မြေဖြစ်ပါသည်</string>
  <string name="title_activity_party_detail">PartyDetailActivity</string>
  <string name="date_of_birth">မွေးသက္ကရာဇ်</string>
  <string name="religion">ကိုးကွယ်သည့်ဘာသာ</string>
  <string name="mother_name">အမိအမည်</string>
  <string name="father_name">အဖအမည်</string>
  <string name="candidate_bio">ကိုယ်ရေးအကျဥ်း</string>
  <string name="motion_header">တင်သွင်းခဲ့သည့်အဆိုများ</string>
  <string name="compare_candidate">အမတ်လောင်း နှိုင်းယှဉ်ချက်</string>
  <string name="question_header">မေးခဲဖူးသည့် ကဏ္ဍများ</string>
  <string name="candidate_address">နေရပ်</string>
  <string name="upper_house_label">မဲဆန္ဒနယ်</string>
  <string name="party">ပါတီ</string>
  <string name="party_leader">ပါတီခေါင်းဆောင်ပိုင်း</string>
  <string name="leader">ဥက္ကဌ</string>
  <string name="party_contact">ဆက်သွယ်ရန်</string>
  <string name="head_quarter">ရုံးချုပ်</string>
  <string name="phone">ဖုန်း</string>
  <string name="cannot_compare">နှိုင်းယှဉ်၍ မရပါ</string>
  <string name="compare_title">နှိုင်းယှဉ်ရန် ရွေးချယ်ပါ</string>
  <string name="first_time_candidate">ပထမဆုံး အကြိမ်ဝင်ရောက်ယှဉ်ပြိုင်ခြင်းဖြစ်ပါသည်</string>
  <string name="how_to_vote_placeholder_text">
    <![CDATA[ <b><font color=#F44336>*</b> %s]]></string>
  <string name="previous_count_header">ယခင်နှစ်ဝင်ယောက်ပြိုင်သည့်ဦးရေ</string>
  <string name="current_count_header">ယခုနှစ်ဝင်ယောက်ပြိုင်သည့်ဦးရေ</string>
  <string name="game_rule">အောက်ပါစာရွက်အညိုသည် မဲပေးရန် စာရွက်အတိုင်း ပုံစံချထားခြင်း
    ဖြစ်သည်။ ထိုစာရွက်ပေါ်တွင် တံဆိပ်တုံး ရိုက်နှိပ်သကဲ့သို့ မိမိလက်ဖြင့်
    နှိပ်ကြည့်ခြင်းဖြင့် မည်သို့သောမဲများသည် ခိုင်လုံမဲ၊ ပယ်မဲဖြစ်သည်ကို စမ်းသပ်ပါ။
  </string>
  <string name="duplicate_candidate_choose">မိမိ နှိုင်းယှဉ်ရန် ရွေးထားသော
    အမတ်ကိုပြန်ရွေးချယ်မိသောကြောင့်ဖြစ်ပါသည်
  </string>
  <string name="no_data">အမတ်လောင်း စာရင်းမရရှိသေးပါ</string>

  <!-- vote validity dialog strings-->
  <string name="check">စစ်မည်</string>
  <string name="correct">မှန်ပါသည်။</string>
  <string name="correct_vote">ပေးခဲ့သောမဲသည် ခိုင်လုံမဲဖြစ်ပါသည်။</string>
  <string name="correct_vote_message">မဲဆန္ဒရှင်တိုင်းသည် အမှန်ခြစ်တံဆိပ်ကို မိမိဆန္ဒပြုလိုသော
    ကိုယ်စားလှယ်လောင်း၏ ညာဘက်ရှိအကွက်တွင် လုံးဝဝင်နေအောင် နှိပ်လိုက်ခြင်းသာ
    အကောင်းဆုံးဖြစ်သည်။
  </string>
  <string name="be_careful">သေချာဂရုစိုက်ပါ</string>
  <string name="incorrect_vote">မိမိ၏ အဖိုးတန်မဲအား ပယ်မဲမဖြစ်စေရန် သေချာဂရုစိုက်ပါ။</string>
  <string name="incorrect_vote_message">* %s</string>
  <string name="cannot_compare_candidate">အားနှိုင်းယှဉ်၍ မရနိုင်ပါ</string>
  <string name="incrroect_candidate_compare">သည် ယခင်က လွှတ်တော်တွင်
    အမတ်အဖြစ်တာဝန်ထမ်းဆောင်ခဲ့ဖူးခြင်း မရှိသေး၍ဖြစ်ပါသည်
  </string>
  <string name="stamp_title">တံဆိပ်တုံးအား တစ်ကြိမ်သာ နှိပ်ပါရန်</string>
  <string name="stamp_warning">အထူးသတိပြုရန်။ ။ တံဆိပ်တုံးနှိပ်ရာတွင်
    မထင်ရှားမှာစိုးသည့်စိတ်ဖြင့် တံဆိပ်တုံးအား တစ်ကြိမ်ထက် ပို၍ မနှိပ်မိရန် ဂရုစိုက်ပါ။
  </string>
  <!-- ballot paper strings-->
  <string name="example_state_legislature">သစ်သီးတိုင်း ဒေသကြီး ပြည်သူ့လွှတ်တော်\nညောင်သီးမြို့နယ်
    မဲဆန္ဒနယ်
  </string>
  <string name="example_voting_step_1">(က) မဲပေးလိုသော ကိုယ်စားလှယ်လောင်း၏အမည် တည့်တည့်
    လေးထောင့်အကွက်ထဲတွင် အမှန်အမှတ်အသား %1$s တံဆိပ်တုံးဖြင့် ရိုက်နှိပ်ပေးပါ။\n (ခ)
    ကြိုတင်မဲပေးလိုသော ကိုယ်စားလှယ်လောင်း၏ အမည်တည့်တည့် လေးထောင့်အကွက်ထဲတွင် အမှန်အမှတ်အသား %2$s
    တံဆိပ်တုံးဖြင့် ရိုက်နှိပ်ပေးပါ။ \n(ဂ) ကိုယ်စားလှယ်လောင်း တစ်ဦးထက်ပို၍ မဲမပေးရပါ။
  </string>

  <string-array name="candidate_name">
    <item>ဦးငှက်ပျောသီး</item>
    <item>ဒေါ်ဖရဲသီး</item>>
    <item>ဦ:ပန်းသီး</item>
  </string-array>
  <string name="time_to_vote">မဲပေးရန် အချိန်ရောက်ပြ</string>
  <string name="time_to_vote_content">မိမိ၏ နိုင်ငံသားအခွင့်အရေးမဆုံးရှုံးစေရန် မဲပေးပါ</string>

  <string name="signature_line_1">ဤနေရာတွင် မဲရုံမှူးလက်မှတ်</string>
  <string name="signature_line_2">ပါမပါ စစ်ပါ။</string>
  <string name="current_compare_head">အမတ် စုစုပေါင်း %1$sနေရာ တွင်</string>
  <string name="prev_compare_result">ဤပါတီမှ %1$sဦး ဝင်ယောက်ယှဥ်ပြိုင်ခဲ့ပါသည်</string>
  <string name="current_compare_result">ဤပါတီမှ %1$sဦး ဝင်ယောက်ယှဥ်ပြိုင်မည် ဖြစ်ပါသည်</string>
  <string name="current_compare_result_zero">ဤပါတီမှ ဝင်ယောက်ယှဥ်ပြိုင်သူ မရှိပါ</string>
  <string name="party_policiy_book">ပါတီ၏ မူဝါဒများအကြောင်း စာအုပ်ရယူရန်</string>
  <string name="facebook_id">1616640151922143</string>
  <string name="FaqList">အမေးများဆုံး မေးခွန်းများ</string>
  <string name="search_faq">Search FAQ</string>
  <!-- zg/ uni test-->
  <string name="zg">သီဟိုဠ္မွ ဉာဏ္ႀကီးရွင္သည္ အာယုဝဍ္ဎနေဆးၫႊန္းစာကို ဇလြန္ေဈးေဘးဗာဒံပင္ထက္
    အဓိ႒ာန္လ်က္ ဂဃနဏဖတ္ခဲ့သည္။
  </string>
  <string name="uni">သီဟိုဠ်မှ ဉာဏ်ကြီးရှင်သည် အာယုဝဍ်ဎနဆေးညွှန်းစာကို ဇလွန်ဈေးဘေးဗာဒံပင်ထက်
    အဓိဋ္ဌာန်လျက် ဂဃနဏဖတ်ခဲ့သည်။
  </string>
  <string name="please_choose_font">ကျေးဇူးပြု၍ မိမိဖုန်းနှင့် ကိုက်ညီသော မြန်မာစာဖောင့်အား
    ရွေးချယ်ပေးပါ။
  </string>

  <string name="please_choose_location">ကျေးဇူးပြု၍ မိမိ၏ နေရပ်လိပ်စာအား ရွေးပေးပါ
  </string>

  <string name="save_font">ရွေးပြီးပြီ</string>

  <string name="error_cant_connect">Can\'t Connect!</string>
  <string name="error_something_wrong">Something went wrong!</string>
  <string name="empty_search_result_title">No Result</string>
  <string name="empty_search_result_subtitle">Can\'t find candidate with your search keyword!</string>
  <string name="about">About Mae</string>
  <string name="font_setting">Font Setting</string>
  <string name="copyright">© 2015 MMAUG</string>
  <string name="version">Version : %1s</string>
  <string name="brought_to_you">SSYGM မှ ဂုဏ်ယူစွာ ရေးသားဖြန့်ဝေသည်။</string>
  <string name="rate_us">Rate Mae On Playstore</string>
  <string name="app_des">၂၀၁၅အထွေထွေရွေးကောက်ပွဲအတွက် ပြီးပြည့်စုံသော လမ်းညွှန်</string>
  <string name="name_uni">အမည်</string>
  <string name="name_zg">အမည္</string>
  <string name="father_name_zg">အဖအမည္</string>
  <string name="father_name_uni">အဖအမည်</string>
  <string name="title_activity_search_candidate">SearchCandidateActivity</string>
  <string name="vw_unicode">ရပ်ကွက် (သို့) ကျေးရွာ</string>
  <string name="vw_zawgyi">ရပ္ကြက္ (သို႔) ေက်းရြာ</string>
  <string name="policy">သဘောတူညီချက်</string>
  <string name="terms">
    Mae mobile application အား downlod ဆွဲ၊ အသုံးပြုသူများသည် အောက်ပါ အချက်များကို အလိုအလျောက် သဘောတူညီပြီးဖြစ်သည်။
    \n\n
    ၁။ Mae app သည် ၂၀၁၅ ခုနှစ် ရွေးကောက်ပွဲနှင့်ပတ်သက်သည့် သတင်းအချက်အလက်များ ရရှိရန် ဆက်သွယ်ပေးသည့် ကြားခံတစ်ခုသာဖြစ်သည်။ Mae app သည် မည့်သည့် နိုင်ငံရေးပါတီ၊ နိုင်ငံရေးအဖွဲအစည်းနှင့်မျှ သက်ဆိုင်ခြင်းမရှိပါ။
    \n\n၂။ ရွေးကောက်ပွဲနှင့်သက်ဆိုင်သည့် အချက်အလက်များကို Mae Pay Soh API နှင့် အခြားသော
    အဖွဲအစည်းများမှ ပေးပိုသည်ကို အရှိကို အရှိအတိုင်း ဖော်ပြထားခြင်းသာဖြစ်သည်။ အချက်အလက်များ မှန်ကန်ရေးသည်၊ ထို အချက်အလက်ပေးသော အဖွဲအစည်းများပေါ်တွင်သာ မူတည်သည်။
    \n\n၃။ အမတ်လောင်းများ၊ ပါတီများ၏ ကိုယ်ရေးအချက်အလက်များကို အသုံးပြုပြီး၊ အမည်တပ်
    ဂုဏ်သိက္ခာချခြင်း၊ ပြည်ထောင်စုသမ္မတမြန်မာနိုင်ငံတော်၏ တည်ဆဲ၊ ပြဌာန်းထားသော
    ဥပဒေများနှင့်မကိုက်ညီသည့် မည့်သည့် မသမာမှုမျိုးကိုမျှ လုံးဝ(လုံးဝ) ပြုလုပ်ခြင်း မပြုရပါ။
    \n\n၄။​ စည်းကမ်းချက်များကို လိုက်နာခြင်းမရှိသဖြင့်၊ ဖြစ်ပေါ်လာသော ကိစ္စရပ်မှန်သမျှသည်၊ Mae
    app
    နှင့်လည်းကောင်း၊ app ရေးသားသူနှင့်လည်းကောင်း လုံးဝ(လုံးဝ) မသက်ဆိုင်ပါ။
    \n\n၅။ Mae app အား အခမဲ့ဖြန့်ဝေထားပါသည်။ မသမာသည့်နည်းဖြင့် ပုံတူပွားခြင်း၊ စီးပွားရေးအရ
    အသုံးချခြင်းများ လုံးဝမပြုရပါ။
  </string>
</resources>
