<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <include layout="@layout/toolbar"/>

    <ImageView
        android:layout_marginTop="@dimen/spacing_major"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher_web"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="@dimen/spacing_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/copyright"/>

    <TextView
        android:id="@+id/tv_version"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="@dimen/spacing_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        tools:text="Version - 1.0.0"/>

    <TextView
        android:id="@+id/tv_app_des"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_marginTop="@dimen/spacing_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:lineSpacingMultiplier="1.2"
        android:gravity="center"
        android:layout_marginLeft="@dimen/spacing_major"
        android:layout_marginRight="@dimen/spacing_major"
        android:text="@string/app_des"/>

    <View
        android:layout_marginTop="@dimen/spacing_major"
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/spacing_massive"
        android:layout_marginLeft="@dimen/spacing_massive"
        android:layout_height="@dimen/spacing_minute"
        android:background="@color/grey_divider"/>

    <TextView
        android:id="@+id/ssygm"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/spacing_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/brought_to_you"
        android:lineSpacingMultiplier="1.2"
        android:gravity="center"
        android:textColor="@color/primary_text_color"
        android:layout_marginLeft="@dimen/spacing_major"
        android:layout_marginRight="@dimen/spacing_major"
        android:layout_marginBottom="@dimen/spacing_major"/>
    <TextView
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/google_play"
        android:drawableStart="@drawable/google_play"
        android:gravity="center"
        android:text="@string/rate_us"
        style="?android:attr/borderlessButtonStyle"
        />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/policy"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginBottom="@dimen/spacing_massive"
        />

  </LinearLayout>

</ScrollView>