<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

  <TextView
      android:id="@+id/tv_choose_des"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/please_choose_font"
      android:padding="@dimen/spacing_minor"
      android:lineSpacingMultiplier="1.2"
      android:textColor="@color/white"
      style="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle"
      android:layout_margin="@dimen/spacing_major"/>
  <RadioGroup
      android:id="@+id/rg_font"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:orientation="vertical"
      android:layout_margin="@dimen/spacing_major"
      android:paddingTop="@dimen/spacing_major"
      android:paddingBottom="@dimen/spacing_major">
    <RadioButton
        android:id="@+id/rb_uni"
        android:layout_marginLeft="@dimen/spacing_major"
        android:layout_marginRight="@dimen/spacing_major"
        android:lineSpacingMultiplier="1.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uni"/>
    <RadioButton
        android:id="@+id/rb_zg"
        android:layout_marginTop="@dimen/spacing_major"
        android:layout_marginLeft="@dimen/spacing_minor"
        android:layout_marginRight="@dimen/spacing_minor"
        android:lineSpacingMultiplier="1.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zg"/>
  </RadioGroup>

  <android.support.v7.widget.CardView
      android:id="@+id/cardview_save_font"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_major"
      android:foreground="?attr/selectableItemBackground"
      app:cardElevation="5dp"
      card_view:cardCornerRadius="@dimen/default_padding_small"
      >

    <LinearLayout
        android:padding="@dimen/spacing_major"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_color"
        >
      <TextView
          android:text="@string/save_font"
          android:layout_gravity="center"
          android:id="@+id/tv_save_font"
          android:gravity="center"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          />
    </LinearLayout>
  </android.support.v7.widget.CardView>
</LinearLayout>